// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Paragraph
  element="p"
  testId="cf-ui-paragraph"
>
  <p
    className="Paragraph"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </p>
</Paragraph>
`;

exports[`renders the component h3 1`] = `
<Paragraph
  element="h3"
  testId="cf-ui-paragraph"
>
  <h3
    className="Paragraph"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </h3>
</Paragraph>
`;

exports[`renders the component with an additional class name 1`] = `
<Paragraph
  className="my-extra-class"
  element="p"
  testId="cf-ui-paragraph"
>
  <p
    className="Paragraph my-extra-class"
    data-test-id="cf-ui-paragraph"
  >
    Paragraph
  </p>
</Paragraph>
`;
